--- a/roles/spark_common/tasks/common.yml
+++ b/roles/spark_common/tasks/common.yml
@@ -1,13 +1,23 @@
 ---
-- name: modify host file add node
-  lineinfile: dest=/etc/hosts line={{ item }}
-  with_items:
-    - "130.211.250.66  node1"
-    - "104.155.221.174 node2"
-    - "104.155.236.168 node3"
+- name: modify host file add master node
+  lineinfile: dest=/etc/hosts line="{{ item }}  spark_master"
+  with_items: "{{ groups.spark_master }}"
 
-# - name: get spark package
-#   get_url: url=http://d3kbcqa49mib13.cloudfront.net/spark-1.5.2-bin-hadoop2.6.tgz dest=/opt/spark-1.5.2-bin-hadoop2.6.tgz mode=0777
+- name: modify host file add slave node
+  lineinfile: dest=/etc/hosts line="{{ item[1] }}  spark_slave_{{ item[0] }}"
+  with_indexed_items: "{{ groups.spark_slave }}"
 
-- name: untar spark package
-  unarchive: src=http://d3kbcqa49mib13.cloudfront.net/spark-1.5.2-bin-hadoop2.6.tgz dest=/opt/ copy=no 
+- name: Download Spark pre-built package
+  get_url: url={{ spark_download_url }} dest="/tmp/spark-{{ spark_version }}.tgz"
+  tags:
+    - install
+
+- name: Extract Spark archive
+  unarchive: copy=no src="/tmp/spark-{{ spark_version }}.tgz" dest=/opt/
+  tags:
+    - install
+
+- name: Create link to Spark directory
+  file: src=/opt/spark-{{ spark_version }} dest={{ spark_root }} state=link
+  tags:
+    - install
