--- a/roles/spark_slave/meta/main.yml
+++ b/roles/spark_slave/meta/main.yml
@@ -121,7 +121,7 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of
     # alphanumeric characters. Maximum 20 tags per role.
 dependencies:
-  - malk.ansible-java8-oracle
+  - spark_common
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
